[gd_scene load_steps=3 format=2]

[ext_resource path="res://menus/components/lobby_player_info.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.054902, 0.0509804, 0.192157, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.0901961, 0.0901961, 0.27451, 1 )

[node name="PanelContainer" type="PanelContainer"]
margin_right = 174.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 169.0
margin_bottom = 97.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 15
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 15.0
margin_top = 5.0
margin_right = 159.0
margin_bottom = 87.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="LabelPlayer" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 144.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Player 0:"
valign = 1

[node name="LabelName" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 144.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Name: "
valign = 1

[node name="LabelRole" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 144.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Guest"
valign = 1
